fix: improve Diff token styling with adjustments to positioning, size, and alignment

--- a/website/src/css/modules/pretext.module.scss
+++ b/website/src/css/modules/pretext.module.scss
@@ -7,6 +7,8 @@
 
     .token {
         position: relative;
+        justify-content: center;
+        align-items: center;
     }
 
     .token.animated {
